better mobile style

--- a/src/TwitterStats/TwitterStats/Content/css/Overrides.css
+++ b/src/TwitterStats/TwitterStats/Content/css/Overrides.css
@@ -47,5 +47,12 @@
         }
 
         @media (max-width: 979px) {
-            .stats-container { height: 350px !important; }
+            .stats-container { height: 370px !important; }
+            .twittertile {
+                font-size: 42px !important;
+            }
+            .icon-twitter {
+                font-size: 42px !important;
+            }
         }
+        
