don't display twitter icon in mobile

--- a/src/TwitterStats/TwitterStats/Content/css/Overrides.css
+++ b/src/TwitterStats/TwitterStats/Content/css/Overrides.css
@@ -48,11 +48,8 @@
 
         @media (max-width: 979px) {
             .stats-container { height: 370px !important; }
-            .twittertile {
-                font-size: 42px !important;
-            }
             .icon-twitter {
-                font-size: 42px !important;
+                display: none !important;
             }
         }
         
